# pg_query_vala

./: .gitignore  README.md  meson.build  script.sh
lib/: meson.build  script.sh
src/: main.vala  pg_query.vala
test/: split_test.vala  split_test_strict.vala
vapi/: libpg_query.vapi
